--- a/jobsnatch2/templates/acceptedcan.html
+++ b/jobsnatch2/templates/acceptedcan.html
@@ -152,7 +152,7 @@
             <a href="{% url 'company'%}" class="active">Dashboard</a>
             <a href="{% url 'jobpost'%}">Post Job</a>
             <a href="{% url 'avlcandidates'%}">Available Candidates</a>
-            <a href="{% url 'notifi' %}">Notifications</a>
+            <a href="notifi/{{ user.id }}">Notifications</a>
             <!-- <a href="{% url 'acceptedcan'%}">Accepted Candidates</a> -->
             
               {% if user.is_authenticated %}
@@ -198,7 +198,6 @@
                         <td style="text-align: center;"><button class="bt" type="submit">interdate</button></td> 
                         
                       </form>
-                      <td><button type="button" class="bt" data-bs-toggle="modal" data-bs-target="#myModal">Set Date</button></td>
                     
                       <!-- <form method="POST" action="{% url 'setdate' %}">
                         {% csrf_token %}
@@ -220,61 +219,6 @@
                 </table>
            </div>  
          </div>
-         
-<!-- The Modal -->
-<div class="modal" id="myModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-
-      <!-- Modal Header -->
-      <div class="modal-header">
-       <h4>Type : Interview</h4>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-
-      <!-- Modal body -->
-      <div class="modal-body">
-        <div class="div1">
-          <form action="{% url 'sche' %}" method="post" onsubmit="cli()"> 
-            {% csrf_token %}
-            <label for="timm" style="margin-left:-14%;">Duration :  </label>
-            <select name="timm" id="interntim"  style="border-radius:7px;margin-left:2%;border:none;text-align:center;" required>
-              <option value="1hr">1hr</option>
-              <option value="30 min">30 min</option>
-              <option value="15-20min">15-20 min</option>
-              <option value="More than 1hr">More than 1hr</option>
-            </select><br><br>
-            <label for="ty" style="margin-left:-14%;">Type :  </label>
-            <select name="ty" id="interntime"  style="border-radius:7px;margin-left:2%;border:none;text-align:center;" required>
-              <option value="Interview - 1">Interview - 1</option>
-              <option value="Interview - 2">Interview - 2</option>
-              <option value="HR">HR</option>
-            </select><br><br>
-            
-            <label for="tday">Time : </label>
-            <input type="datetime-local" id="birthdaytime" name="tim"><br><br>
-            <input type="number" value={{user.id}} name="caid" hidden>
-            {% for x in data %}
-              {% if user.cat == x.cat %}
-                {% if user.username in x.username %}
-                  <input type="text" value={{x.can_id_id}}>
-                  <input type="text" value={{x.can_id_id}} name="canid" hidden>
-                {% endif %}
-              {% endif %}
-            {% endfor %}
-            <button type="submit" style="border-radius: 5px;border:none;background: rgb(7, 133, 183);height:fit-content;width:fit-content;font-weight:bold;color:white;font-size:medium;">Confrim</button>
-          </form>
-        </div>
-      </div>
-
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-      </div>
-
-    </div>
-  </div>
-</div>
 
 
           <script>
