--- a/jobsnatch2/templates/notifications.html
+++ b/jobsnatch2/templates/notifications.html
@@ -1,3 +1,181 @@
 <html>
-    
+    <style>
+        .topnav {
+            overflow: hidden;
+            background-color: #333;
+            margin-bottom: -2%;
+          }
+          
+          .topnav a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+          }
+          
+          .active {
+            background-color: #04AA6D;
+            color: white;
+          }
+          
+          .topnav .icon {
+            display: none;
+          }
+          
+          .dropdown {
+            float: left;
+            overflow: hidden;
+          }
+          
+          .dropdown .dropbtn {
+            font-size: 17px;    
+            border: none;
+            outline: none;
+            color: white;
+            padding: 14px 16px;
+            background-color: inherit;
+            font-family: inherit;
+            margin: 0;
+          }
+          
+          .dropdown-content {
+            display: none;
+            position: relative;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index:1;
+          }
+          
+          .dropdown-content a {
+            float: none;
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+          }
+          
+          .topnav a:hover, .dropdown:hover .dropbtn {
+            background-color: #555;
+            color: white;
+          }
+          
+          .dropdown-content a:hover {
+            background-color: #ddd;
+            color: black;
+          }
+          
+          .dropdown:hover .dropdown-content {
+            display: block;
+            
+          }
+          
+          @media screen and (max-width: 600px) {
+            .topnav a:not(:first-child), .dropdown .dropbtn {
+              display: none;
+            }
+            .topnav a.icon {
+              float: right;
+              display: block;
+            }
+          }
+          
+          @media screen and (max-width: 600px) {
+            .topnav.responsive {position: relative;}
+            .topnav.responsive .icon {
+              position: absolute;
+              right: 0;
+              top: 0;
+            }
+            .topnav.responsive a {
+              float: none;
+              display: block;
+              text-align: left;
+            }
+            .topnav.responsive .dropdown {float: none;}
+            .topnav.responsive .dropdown-content {position: relative;}
+            .topnav.responsive .dropdown .dropbtn {
+              display: block;
+              width: 100%;
+              text-align: left;
+            }
+          }
+            table {
+              font-family: arial, sans-serif;
+              border-collapse: collapse;
+              width: 70%;
+            }
+            
+            td, th {
+              border: 1px solid #dddddd;
+              text-align: left;
+              padding: 8px;
+            }
+            
+            tr:nth-child(even) {
+              background-color: #ffffff;
+            }
+          .bt{
+            background-color: rgb(73, 198, 73);
+             border-radius:7px;
+             height:fit-content;
+             width:80px;
+             font-size:small;
+             padding: 7.5px;
+             font-weight:bold;
+             color:white;
+             border:none;
+          }
+          .div1{
+            height: fit-content;
+            width: 50%;
+            text-align:center;
+            background-color:rgba(255, 255, 255, 0.606);
+            margin-top:5%;
+            margin-left:25%;
+            border-radius:10px;
+            padding:6px;
+            font-size: large;
+            
+          }
+          </style>
+          <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">
+            <div class="topnav" id="myTopnav" style="width:1500px;margin-top:-10">
+                <a href="{% url 'company'%}" class="active">Dashboard</a>
+                <a href="{% url 'jobpost'%}">Post Job</a>
+                <a href="{% url 'avlcandidates'%}">Available Candidates</a>
+                <a href="notifi/{{ user.id }}">Notifications</a>
+                
+                  {% if user.is_authenticated %}
+                     <a href="{% url 'logout' %}">Logout</a>
+                  {% endif %}
+                <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+             
+            </div>
+            <div style="text-align:center;background-color:rgba(255, 255, 255, 0.392);margin-top:5%;border-radius:10px;width:40%;height:50%;margin-left:2%;">
+              <h2>Confirmed Dates</h2>
+                {% for i in sc %}
+                  <form action="notifi/{{ user.id }}" method="post">
+                      <input type="text" name="test" value="{{i.can_id}}" hidden>
+                  </form>
+                  {{i.can_id}}
+                  
+                {% endfor %}
+            </div>
+            <div style="text-align:center;background-color:rgba(255, 255, 255, 0.392);margin-top:5%;border-radius:10px;width:40%;height:50%;float:right;margin-top:-22.5%;margin-right:2%;">
+              <h2>Prefered Dates</h2>
+                {% for i in scc %}
+                     Canid : {{i.can_id}}<br>
+                     Reason : {{i.reason}}<br>
+                     Prefered date : {{i.can_date}}<br>
+                     Type : {{i.typp}}<br>
+                     
+                {% endfor %}
+            </div>
+            
+        </body>
 </html>
