--- a/jobsnatch2/templates/avlcandidates.html
+++ b/jobsnatch2/templates/avlcandidates.html
@@ -127,6 +127,7 @@
             <a href="{% url 'jobpost'%}">Post Job</a>
             <a href="{% url 'avlcandidates'%}">Available Candidates</a>
             <a href="{% url 'acceptedcan'%}">Accepted Candidates</a>
+            <a href="{% url 'compoffer'%}">Candidates</a>
             
             
               {% if user.is_authenticated %}
