--- a/jobsnatch2/templates/compoffer.html
+++ b/jobsnatch2/templates/compoffer.html
@@ -1,8 +1,5 @@
+{% load static %}
 <html>
-  <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
     <style>
     .topnav {
         overflow: hidden;
@@ -123,47 +120,30 @@
         tr:nth-child(even) {
           background-color: #ffffff;
         }
-      .bt{
-        background-color: rgb(73, 198, 73);
-         border-radius:7px;
-         height:fit-content;
-         width:80px;
-         font-size:small;
-         padding: 7.5px;
-         font-weight:bold;
-         color:white;
-         border:none;
-      }
-      .div1{
-        height: fit-content;
-        width: 50%;
-        text-align:center;
-        background-color:rgba(255, 255, 255, 0.606);
-        margin-top:5%;
-        margin-left:25%;
-        border-radius:10px;
-        padding:6px;
-        font-size: large;
-        
-      }
       </style>
     <body style="background-image: linear-gradient( rgb(198, 201, 202),rgb(50, 147, 166));">
         <div class="topnav" id="myTopnav" style="width:1500px;margin-top:-10">
             <a href="{% url 'company'%}" class="active">Dashboard</a>
             <a href="{% url 'jobpost'%}">Post Job</a>
             <a href="{% url 'avlcandidates'%}">Available Candidates</a>
-            <a href="{% url 'compoffer'%}">Candidates</a>
-            <a href="notifi/{{ user.id }}">Notifications</a>
-            <!-- <a href="{% url 'acceptedcan'%}">Accepted Candidates</a> -->
+            <a href="{% url 'acceptedcan'%}">Accepted Candidates</a>
+            
             
               {% if user.is_authenticated %}
+                <!-- <p style=" margin-top:15%;margin-left:20%">
+                 <div class="d-flex justify-content-center align-items-center rounded" style="height: 30px;width:30px; background-color: rgb(233, 236, 239);">
+                   {% if user.image %}
+                     <img src="{{user.image.url}}" alt="..."width=30px height="30px" style="border-radius: 50%;" >
+                   {% endif %}
+                 </div>
+                 <div style="margin-top:-60%;margin-left:60%;color: white;font-weight:bold">{{user.username}}</div>
+                 <div style="margin-top:-65%;margin-left:120%;"><a href="{% url 'logout'%}"><img src="{% static 'images/logout.png'%}" width="25" height="25" style="color: white;"></a></div>
+                </p> -->
                  <a href="{% url 'logout' %}">Logout</a>
               {% endif %}
-            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-         
-        </div>
-        <br><br>
-       <h1 style="color: black; text-align:center">Accepted Candidates :</h1>
+            </div>
+            <!-- <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> -->
+       <h1 style="color: black; text-align:center">Available Candidates :</h1>
        
        
        
@@ -176,52 +156,10 @@
               <th style="text-align: center;">ABOUT</th>
               <th style="text-align: center;">EMAIL</th>
               <th style="text-align: center;"></th>
-              <th style="text-align: center;"></th>
             </tr>
-            {% for x in data %}
-              {% if user.cat == x.cat %}
-                 <tr>
-                  
-                     {% if user.username in x.username %}
-                      <form method="POST" action="canpage2">
-                        {% csrf_token %}
-                          <td style="text-align: center;">{{ x.name}}</td>
-                          <td style="text-align: center;">{{ x.abt}}</td>
-                          <td style="text-align: center;"><a href="#">{{ x.email}}</a></td>
-                          <td style="text-align: center;" hidden><input type="text" name="jobid" value="{{ x.jobs_id_id}}"></td>
-                          <td style="text-align: center;"  hidden><input type="text" name="canid" value="{{ x.can_id_id}}"></td>
-                          <td style="text-align: center;"><button class="bt" type="submit">View More</button></td>
-                        <!-- <td style="text-align: center;">{{ x.username}}</td> -->
-                      </form>
-                      <form action="{% url 'interdate'%}" method="post">
-                       {% csrf_token %}
-                        <td style="text-align: center;"  hidden><input type="text" name="canid" value="{{ x.can_id_id}}"></td>
-                        <td style="text-align: center;"><button class="bt" type="submit">interdate</button></td> 
-                        
-                      </form>
-                    
-                      <!-- <form method="POST" action="{% url 'setdate' %}">
-                        {% csrf_token %}
-                        <td style="text-align: center;"><button class="bt" type="submit">Set Date</button>
-                         <input type="text" name="jobid" value="{{ x.jobs_id_id}}" hidden>
-                         <input type="text" name="canid" value="{{ x.can_id_id}}" hidden>
-                      </form> -->
-                        <!-- <td style="text-align: center;">{{ user.id}}</td> -->
-                      {% endif %}
-                     <!-- <td style="text-align: center;"><a href="#">{{ x.email }}{{ x.about}}</a></td> -->
-                     
-                     <!-- <td style="text-align: center;" hidden><input type="text" name="cmpid" value="{{ x.job_id}}"></td> -->
-                   
-                   
-                 </tr>
-                  {% endif %}
-                 {% endfor %}
-                 
                 </table>
            </div>  
          </div>
-
-
           <script>
           function myFunction() {
             var x = document.getElementById("myTopnav");
@@ -232,7 +170,6 @@
             }
           }
           </script>
-    </body>
 </html>
 
 
