--- a/jobsnatch2/templates/compoffer.html
+++ b/jobsnatch2/templates/compoffer.html
@@ -122,7 +122,7 @@
         }
       </style>
     <body style="background-image: linear-gradient( rgb(198, 201, 202),rgb(50, 147, 166));">
-        <div class="topnav" id="myTopnav" style="width:1500px;margin-top:-10">
+        <div class="topnav" id="myTopnav" style="width:1500px;margin-top:-10;margin-left:-1%;">
             <a href="{% url 'company'%}" class="active">Dashboard</a>
             <a href="{% url 'jobpost'%}">Post Job</a>
             <a href="{% url 'avlcandidates'%}">Available Candidates</a>
