--- a/jobsnatch2/templates/interdate.html
+++ b/jobsnatch2/templates/interdate.html
@@ -12,13 +12,25 @@
                  color:white;
                  border:none;
               }
+
+              .bt4{
+                background-color: transparent;
+                 border-radius:7px;
+                 height:fit-content;
+                 width:fit-content;
+                 font-size:large;
+                 padding: 7.5px;
+                 font-weight:bold;
+                 color:rgb(0, 0, 0);
+                 border:none;
+              }
+
               .div1{
                 height: fit-content;
-                width: 50%;
+                width: 35%;
                 text-align:center;
                 background-color:rgba(255, 255, 255, 0.606);
                 margin-top:5%;
-                margin-left:25%;
                 border-radius:10px;
                 padding:6px;
                 font-size: large;
@@ -26,8 +38,11 @@
               }
         </style>
     </head>
-    <body>
+    <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">
+        <h1 style="text-align:center;">Set date for candidate assosiated rounds : </h1>
+        <center>
         <div class="div1">
+          <br>
          <form action="{% url 'sche' %}" method="post" onsubmit="cli()"> 
           {% csrf_token %}
             <label for="timm" style="margin-left:-14%;">Duration :  </label>
@@ -37,6 +52,7 @@
               <option value="15-20min">15-20 min</option>
               <option value="More than 1hr">More than 1hr</option>
             </select><br><br>
+            
             <label for="ty" style="margin-left:-14%;">Type :  </label>
             <select name="ty" id="interntime"  style="border-radius:7px;margin-left:2%;border:none;text-align:center;" required>
               <option value="Interview - 1">Interview - 1</option>
@@ -48,7 +64,7 @@
             <input type="datetime-local" id="birthdaytime" name="tim"><br><br>
             <input type="number" value={{user.id}} name="caid" hidden>
             <input type="number" value={{can}} name="canid" hidden>
-            <h2>{{can}}</h2>
+            <h2 hidden>{{can}}</h2>
             <!-- {% for x in data %}
               {% if user.cat == x.cat %}
                 {% if user.username in x.username %}
@@ -57,8 +73,21 @@
                 {% endif %}
               {% endif %}
             {% endfor %} -->
-            <button type="submit" style="border-radius: 5px;border:none;background: rgb(7, 133, 183);height:fit-content;width:fit-content;font-weight:bold;color:white;font-size:medium;">Confrim</button>
+            <button type="submit" onclick="myFunction()" style="border-radius: 5px;border:none;background: rgb(7, 133, 183);height:fit-content;width:fit-content;font-weight:bold;color:white;font-size:medium;">Confrim</button>
         </form>
        </div>
+       <br>
+       <a href="{% url 'acceptedcan' %}"><button class="bt4"><< Go Back</button></a>
+
+      </center>
+      <!DOCTYPE html>
+
+<script>
+function myFunction() {
+  alert("Successfully assigned date");
+}
+</script>
+
+
     </body>
 </html>
