--- a/jobsnatch2/templates/moreinterns.html
+++ b/jobsnatch2/templates/moreinterns.html
@@ -150,7 +150,7 @@ margin-bottom: 2%;
           </div>
         </div>
       {% endfor %}
-        
+      <button >Try it</button>
       <script>
       function myFunction() {
         var x = document.getElementById("myTopnav");
@@ -160,6 +160,7 @@ margin-bottom: 2%;
           x.className = "topnav";
         }
       }
+      
       </script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
