--- a/jobsnatch2/templates/progress.html
+++ b/jobsnatch2/templates/progress.html
@@ -1,5 +1,6 @@
+{% extends 'base.html'%}
 <!DOCTYPE html>
-<html>
+  {% block content %}
   <head>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
@@ -45,6 +46,7 @@
   }
   </style>
 <body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));"> 
+  <h1 style="text-align: center;">Know your progress here</h1>
  <table>
   <th>Company</th>
   <th>Title</th>
@@ -83,4 +85,5 @@
    
 </table>
 </body>
+{% endblock %}
 </html>
