--- a/jobsnatch2/templates/index.html
+++ b/jobsnatch2/templates/index.html
@@ -179,7 +179,7 @@ color:white
  <div class="homebody">
   <div class="header" id="myHeader">
     <a href="#default" class="logo">JobSnatch</a>
-    <div class="header-right">
+    <div id="google_element" class="header-right">
       <a class="active" href="#home">Home</a>
       <a href="#cat">Categories</a>
       <a href="#blo">Blog</a>
@@ -192,6 +192,12 @@ color:white
       <a href="{% url 'resdetails' %}">Resdetails</a>
       <!-- <a href="{% url 'register' %}" style="width:auto; color:white">Register</a> -->
       <a href="{% url 'login' %}" style="width:auto; color:white">Login</a>
+      <!-- <script src="http://translate.google.com/translate_a/element.js?cb=loadGoogleTranslate"></script>
+                            <script >
+                                function loadGoogleTranslate(){
+                                   new google.translate.TranslateElement("google_element");
+                                }
+                            </script> -->
     </div>
   </div>
 
