--- a/jobsnatch2/templates/addin.html
+++ b/jobsnatch2/templates/addin.html
@@ -1,16 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>admin page</title>
-</head>
-<body>
-    {% if request.session.usr %}
-        <h1> hello {{request.session.usr}} your role is admin</h1>
-    {% endif %}
-</body>
-</html> -->
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -96,19 +83,22 @@ body {margin:0;font-family:Arial}
     text-align: left;
   }
 }
+
+
   table {
-    margin-left: -15%;
+    font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 500px;
+    width: 70%;
   }
   
-  td, th, tr{
-    border: 1px solid #000000;
-    padding: 12px;
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
   }
   
   tr:nth-child(even) {
-    background-color: #77e1ffd8;
+    background-color: #ffffff;
   }
 
 
@@ -165,16 +155,29 @@ body {margin:0;font-family:Arial}
     .sidebar {padding-top: 15px;}
     .sidebar a {font-size: 18px;}
   }
+
+  .div {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 300px;
+    padding: 50px;
+    float:right;
+    margin-right: 7%;
+    border-radius: 10px;
+  }
+
+  .ab{
+       border-radius:5px;
+  }
 </style>
-<body style="background-image: linear-gradient(to right, rgba(22, 172, 213, 0.973),rgba(15, 184, 227, 0.598),rgba(15, 184, 227, 0.598), rgba(22, 172, 213, 0.973));">
+<body style="background-image: linear-gradient( rgb(198, 201, 202),rgb(50, 147, 166));background-repeat:no-repeat">
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="{% url 'admin'%}">Dashboard</a>
     <a href="{% url 'admincan'%}">Candidate</a>
+    <a href="{% url 'admincom'%}">Company</a>
     <a href="{% url 'addcate'%}">Add Category</a>
-    <a href="{% url 'addin'%}">Add Internship</a>
   </div>
-  <div id="main">
+  <div id="main" style="height: 1000px;">
   
   
     <script>
@@ -212,52 +215,52 @@ body {margin:0;font-family:Arial}
         }
       }
       </script>
-      <br>
-<h1 style="color: black; text-align:center;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">Available Companies</h1>   
-<br> 
-<div style="padding:2%; margin-top:-2%;" >
-   <div class="w3-third" style="margin-left: 15%;">
-     <table>
-        <tr>
-          <th style="text-align: center;">COMPANY</th>
-          <th style="text-align: center;">RECRUITER</th>
-          <th style="text-align: center;">EMAIL</th>
-          <th style="text-align: center;">PHONE</th>
-          <th style="text-align: center;">PROOF</th>
-          <!-- <th style="text-align: center;">EMAIL</th> -->
-          
-        </tr>
-        {% for x in data %}
-         <tr>
-          {% if x.status == False %}
-                <td style="text-align: center;">{{ x.username}}</td>
-                <td style="text-align: center;">{{ x.recruiter}}</td>
-                <td style="text-align: center;">{{ x.email}}</td>
-                <td style="text-align: center;">{{ x.phone}}</td>
-                <td style="text-align: center;">{{ x.proof}}</td>
-                <form method="post" action="{% url 'comppage3' %}">
-                    {% csrf_token %}
-                      <td style="text-align: center;"><button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:110px;font-weight:bold;color:white;border:none" type="submit" id="try2">More Info</button></td>
-                      <td style="text-align: center;" hidden><input type="text" name="cmpid" value="{{ x.id}}"></td>
-                </form>
-                <form method="post" action="adminapprove">
-                  {% csrf_token %}
-                    <td style="text-align: center;"><button  style="background-color: rgb(73, 198, 73); border-radius:7px;height:35px;width:80px;font-weight:bold;color:white;border:none" type="submit">Approve</button></td>
-                    <td style="text-align: center;" hidden><input type="text" name="username" value="{{ x.username}}"></td>
-                </form>
-                <form action="{% url 'authdeletecom' %}" method="post">
-                      {% csrf_token %}
-                      <td style="text-align: center;"><button type="submit" id="submit" name="submit" class="btn btn-primary" style="background-color: rgb(255, 25, 25);border-radius:5px;border:solid red 2px;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">delete</button></td>
-                      <td style="text-align: center;" hidden></td><input type="text" name="username" class="form-control" id="website"value="{{ x.username}}" hidden>
-                </form>
-            {% endif %}
-         </tr>
-        {% endfor %}
-     </table>
-  </div>  
- </div>
- <br><br>  
+      <center>
+       <div style="margin-top:5%;background-color:rgba(255, 255, 255, 0.373);align-items:center;width:50%;padding:3%;border-radius:10px;">
+        <h2>Add New Internships</h2><br>
+        <table>
+        <form action="{% url 'intern' %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <tr>
+              <td><label for="tit">Enter Title : </label></td>
+              <td><input type="text" placeholder="Title" name="tit" class="ab"></td>
+            </tr>
+            <tr>
+              <td><label for="tit">Category Type : </label></td>
+              <td><select name="caty">
+                {% for i in ad %}
+                  <option value="{{i.categname}}" class="ab">{{i.categname}}</option>
+                {% endfor %}
+              </select></td>
+              <!-- <td><input type="text" placeholder="Title" name="caty" class="ab"></td> -->
+            </tr>
+            <tr>
+              <td><label for="cap">Enter Caption : </label></td>
+              <td><input type="text" placeholder="caption" name="cap" class="ab"></td>
+            </tr>
+            <tr>
+              <td><label for="durno">Enter Duration : </label></td>
+              <td><input type="number" placeholder="Duration num" name="durno" class="ab"></td>
+            </tr>
+            <tr>
+              <td><label for="durex">Week/Mon : </label></td>
+              <td><input type="text" name="durex" class="ab"></td>
+            </tr>
+            <tr>
+              <td><label for="edate">Enter Enddate : </label></td>
+              <td><input type="date" placeholder="Enddate" name="edate" class="ab"></td>
+            </tr>
+            <tr>
+              <td><label for="pp" style="background-color: rgb(35, 157, 214);height:20%;padding:1.5%;border-radius:5px;float:left;padding:5%;"> Add Image</label>
+              <input type="file"  accept="image/png, image/jpeg" name="p" id="pp" hidden></td>
+              <td><input type="submit" value="Submit" style="border-radius: 5px;background-color:#07cb83;border:none;padding:1.3%;float:right;padding:4%;"></td>
+            </tr>
+         </form>
+        </table>
+      </div>
+    </center>
 </div>
+
 
 </body>
 </html>
