--- a/jobsnatch2/templates/admin.html
+++ b/jobsnatch2/templates/admin.html
@@ -181,9 +181,10 @@ body {margin:0;font-family:Arial}
 <body style="background-image: linear-gradient( rgb(198, 201, 202),rgb(50, 147, 166));background-repeat:no-repeat">
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="{% url 'admin'%}">Dashboard</a>
     <a href="{% url 'admincan'%}">Candidate</a>
     <a href="{% url 'admincom'%}">Company</a>
+    <a href="{% url 'addcate'%}">Add Category</a>
+    <a href="{% url 'addin'%}">Add Internship</a>
   </div>
   <div id="main" style="height: 1000px;">
   
@@ -237,26 +238,6 @@ body {margin:0;font-family:Arial}
           <p style="text-align: center;">Available Companies</p>
           <p style="text-align: center;">{{data2}}</p>
        </div>
-       <div style="margin-top:20%">
-        <form action="{% url 'addcat' %}" method="POST" enctype="multipart/form-data">
-           {% csrf_token %}
-           <input type="text" placeholder="category type" name="cat">
-           <input type="file"  accept="image/png, image/jpeg" name="p">
-           <input type="submit" value="Submit">
-        </form>
-      </div>
-      <div style="margin-top:20%">
-        <form action="{% url 'intern' %}" method="POST" enctype="multipart/form-data">
-           {% csrf_token %}
-           <input type="text" placeholder="Title" name="tit">
-           <input type="text" placeholder="caption" name="cap">
-           <input type="number" placeholder="Duration num" name="durno">
-           <input type="text" placeholder="week/mon" name="durex">
-           <input type="date" placeholder="Enddate" name="edate">
-           <input type="file"  accept="image/png, image/jpeg" name="p">
-           <input type="submit" value="Submit">
-        </form>
-      </div>
 </div>
 
 
