--- a/jobsnatch2/templates/form.html
+++ b/jobsnatch2/templates/form.html
@@ -113,11 +113,10 @@ h1 {
 }
 
 .topnav {
-  
   height:15%;
   float:left;
   margin-left:-1%;
-  margin-top: -1%;
+  margin-top: -2%;
 }
 
 .topnav a {
@@ -134,6 +133,7 @@ h1 {
   background-color: black;
   color: white;
   font-weight: bold;
+  border-radius: 10px;
 }
 
 .topnav .icon {
@@ -192,7 +192,7 @@ h1 {
       <div class="topnav" id="myTopnav">
         <a href="{% url 'candidate'%}" class="active">Go Back</a>
         <div style="margin-left: 75%;">
-          <center><h1 style="font-weight: bolder; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-size:xx-large">Jobsnacth Feedback</h1></center>
+          <center><h1 style="font-weight: bolder; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;font-size:xx-large;margin-top:1.5%;">Jobsnacth Feedback</h1></center>
         </div>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
